# AndroidPhotoSync

./: 99-phonesync.rules  README.md  install.sh  phonesync.py  phonesync.service  pyproject.toml  run_tests.py
test/: conftest.py  test_contract.py  test_library_index.py  test_real_adb.py  test_redteaming.py  test_state.py  test_sync_basic.py  test_sync_engine.py  test_syncengine_behavior.py
